style: Fixed the overlay background element z-index on single movie

--- a/src/app/styles/movie-details.module.css
+++ b/src/app/styles/movie-details.module.css
@@ -20,18 +20,19 @@
   width: 100%;
   height: 100%;
   background-image: var(--color-gradient); 
+  z-index: 0;
 }
 
 .movieDetailsCard {
   background-image: var(--color-gradient);
   background-attachment: fixed;
   margin: 0;
-  height: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-top: 80px;
+  z-index: 100;
 }
 
 .posterContainer {
